# packetsafari-onprem

./: README.md  bootstrap-manifest.json  bootstrap.sh  pyproject.toml
.guard/: guard.json
docs/: license-claims.md
examples/: release-manifest.json
keys/: license-public.pem
packetsafari_onprem/: api.py  cli.py  envfile.py  menu.py  operations.py
scripts/: configure_logging.py  license_common.py  license_create.py  license_inspect.py  license_renew.py  license_verify.py  render_compose.py  render_logging_config.py
templates/: docker-compose.onprem.yml.tpl
